--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,7 @@
-@import 'reset.css';
+@import './common/reset.css';
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
+@import "./assets/_index.css";
+@import "./tags/index.css";
 
 :root {
   --color-text-primary: #575757;
@@ -16,303 +18,4 @@ body {
   color: var(--color-text-primary);
 }
 
-.assets {
-  position: relative;
-  margin: 0 auto;
-  display: grid;
-  max-width: 1254px;
-  grid-template-columns: 296px 1fr;
-  grid-template-rows: auto;
-  align-content: flex-start;
-  gap: 22px;
-  padding: 40px 20px;
-}
 
-.assets__main {
-  display: grid;
-  grid-template-columns: repeat(4, 216px);
-  justify-content: center;
-  align-content: center;
-  gap: 24px;
-}
-
-.assets__sidebar {
-  width: 296px;
-}
-
-.assets-filter{
-  display: block;
-  padding: 20px 16px;
-  background-color: white;
-  border-radius: var(--border-radius-primary);
-}
-
-.assets-filter__title{
-  font: var(--font-title);
-}
-.assets-filter__item{
-  text-transform: capitalize;
-}
-
-.asset-type-view{
-  display: flex;
-  align-items: center;
-  align-content: center;
-}
-
-.asset-type-view span{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.asset-type-view svg{
-  flex: 0 0 16px;
-  display: inline-block;
-  max-width: 16px;
-  max-height: 16px;
-  margin-right: 6px;
-}
-
-.assets-filter__list{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.assets-filter__title + .assets-filter__list{
-  margin-top: 12px;
-}
-
-.asset-item {
-  position: relative;
-  display: grid;
-  align-items: flex-end;
-  width: 216px;
-  height: 279px;
-  border-radius: var(--border-radius-primary);
-  overflow: hidden;
-  background-color: white;
-  grid-auto-rows: 1fr max-content max-content;
-  grid-template-columns: 1fr;
-}
-
-.asset-item__preview {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.asset-item__preview-image {
-  user-select: none;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.asset-item__body {
-  position: relative;
-  background: white;
-  z-index: 2;
-  padding: 18px;
-  width: 100%;
-  display: block;
-  overflow: hidden;
-}
-
-.asset-item__title {
-  font: var(--font-title);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.asset-item__description {
-  font: var(--font-description);
-  margin-top: 8px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.asset-item__bookmark{
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  right: 16px;
-  top: 16px;
-  background: none;
-  display: flex;
-  color: inherit;
-  border: none;
-  cursor: pointer;
-}
-
-.asset-item__bookmark svg{
-  margin: auto;
-}
-
-.asset-item:hover .asset-item__info{
-  pointer-events: auto;
-  opacity: 1;
-  visibility: visible;
-}
-
-.asset-item__info{
-  transition: .3s;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  display: flex;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
-  padding: 13px 16px;
-  color: white;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  width: 100%;
-  gap: 8px;
-}
-
-.asset-total__count {
-  font-size: 16px;
-  line-height: 14px;
-  font-weight: 900;
-}
-
-.asset-total__description{
-  font-size: 10px;
-}
-
-.button-use{
-  border-radius: var(--border-radius-primary);
-  font-size: 10px;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 9px;
-  border:  none;
-  background: hsla(214, 100%, var(--button-use-bg-color-lightness, 64%), 1);
-  color: inherit;
-  transition: .3s;
-  cursor: pointer;
-}
-
-
-.button-use:hover{
-  --button-use-bg-color-lightness: 70%;
-}
-
-.asset-download-btn{
-  border-radius: var(--border-radius-primary);
-  font-size: 10px;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 9px;
-  border:  1px solid white;
-  background: none;
-  color: inherit;
-  transition: .3s;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-}
-
-.asset-item__footer{
-  padding: 10px 16px;
-  border-top: 1px solid #F4F5F7;
-}
-
-.asset-link{
-  color: var(--color-text-primary);
-  display: grid;
-  grid-template: "left top" "left bottom" / max-content 1fr;
-  column-gap: 8px;
-  text-decoration: none;
-  line-height: 1;
-}
-
-.asset-link__icon{
-  display: flex;
-  width: 30px;
-  height: 30px;
-  background: #E4E7ED;
-  border-radius: var(--border-radius-primary);
-  justify-content: center;
-  justify-items: center;
-  align-content: center;
-  align-items: center;
-  grid-area: left;
-}
-
-.asset-link__title{
-  font: var(--font-link);
-  grid-area: top;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.asset-link__preview{
-  font: var(--font-link);
-  grid-area: bottom;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.assets-filter__checkbox{
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
-}
-
-.checkbox-icon{
-  color: transparent;
-  background: transparent;
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  border: 1px solid #E8E8E8;
-  border-radius: 3px;
-  position: relative;
-  box-sizing: content-box;
-}
-
-.checkbox-input{
-  visibility: hidden;
-  position: absolute;
-}
-
-.checkbox-input:checked + .checkbox-icon .checkbox-icon--active{
-  visibility: visible;
-}
-
-.checkbox-icon--active{
-  visibility: hidden;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-
-.tags{
-  display: flex;
-  gap: 4px;
-  flex-wrap: wrap;
-}
-
-.tag{
-  padding: 4px;
-  background: #F4F5F7;
-  border-radius: 3px;
-  font: var(--font-link)
-
-}
