--- a/app/templates/components/assets.hbs
+++ b/app/templates/components/assets.hbs
@@ -1,8 +1,8 @@
 <div class="assets">
   <aside class="assets__sidebar">
-    <AssetsFilter @currentAssetTypes={{@currentAssetTypes}} @updateAssetTypeState={{@updateAssetTypeState}}/>
+    <Assets::Filter @currentAssetTypes={{@currentAssetTypes}} @updateAssetTypeState={{@updateAssetTypeState}}/>
   </aside>
   <main class="assets__main">
-    <AssetsGrid @assets={{@assets}} @onUseAsset={{@onUseAsset}}/>
+    <Assets::Grid @assets={{@assets}} @onUseAsset={{@onUseAsset}}/>
   </main>
 </div>
