--- a/app/templates/components/assets/filter/item.hbs
+++ b/app/templates/components/assets/filter/item.hbs
@@ -3,7 +3,7 @@
     <span class="checkbox-icon">
       {{svg-jar "#checkbox-active" class="checkbox-icon--active" width="16px" height="16px"}}
     </span>
-    <Ui::AssetTypeView @assetTypeId={{@value}}>
+    <Assets::TypeView @assetTypeId={{@value}}>
       {{@key}}
-    </Ui::AssetTypeView>
+    </Assets::TypeView>
 </label>
